[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.19", features = ["derive"] }
# serds = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
