[package]
name = "stationeers-mips"
description = "functions for interacting with CalDAV servers"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }


[dependencies]
thiserror = { workspace = true }
