[package]
name = "stationeers-mips"
description = "Intermediate representation for Stationeers MIPS assembly"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }


[dependencies]
thiserror = { workspace = true }
