[package]
name = "ayysee-parser"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
# serde.workspace = true
# serde_json = "1.0.87"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.lalrpop-util]
version = "0.19.10"
features = ["lexer"]

[build-dependencies]
lalrpop = "0.19.10"
